tests/fixtures/invalid/sys_args_type.lby
fn bad -> i64
    sys_status("rustc", [1])
